<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:hint="@string/name_of_schedule" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/Fst"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/_1st_week" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/Snd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/_2nd_week" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/Trd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/_3rd_week" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/Fth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/_4th_week" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>