<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    android:backgroundTint="#DFDFDF"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/card_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:text="@string/title_goes_here"
            android:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/frequency"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="15dp"
            android:text="@string/frequency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:orientation="horizontal"
            android:layout_width="380dp"
            android:layout_height="192dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_marginTop="57dp" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toEndOf="@+id/card_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:gravity="start|center"
            android:visibility="gone"
            android:text="@string/no_sub_schedules_create_one" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial2"
            android:layout_width="96dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:text="@string/switch_text"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toEndOf="@+id/card_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="100dp"
            android:elevation="1dp"
            android:scaleType="center"
            android:src="@drawable/ic_delete_black_24dp"
            app:backgroundTint="#CE393D"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_schedule"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:scaleType="center"
            android:src="@drawable/ic_plus_24"
            app:backgroundTint="#AF4F55"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="1dp"
            app:borderWidth="0dp"
            app:fabCustomSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>